--- a/styles/index.css
+++ b/styles/index.css
@@ -58,7 +58,7 @@ pre {
 @tailwind utilities;
 
 .highlight {
-  background-image: linear-gradient(120deg, #F6E05E, #F6E05E);
+  background-image: linear-gradient(120deg, #f6e05e, #f6e05e);
   background-repeat: no-repeat;
   background-size: 100% 0.4em;
   background-position: 0 100%;
