Update packages, remove unused code, and a couple stlyeS

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,13 @@ pre {
   @apply overflow-auto p-3 my-1;
   background-color: #f5f2f0;
 }
+em {
+  @apply italic;
+}
+strong {
+  @apply font-bold;
+}
+
 
 @tailwind components;
 
